--- a/config/tasks.yaml
+++ b/config/tasks.yaml
@@ -1,11 +1,11 @@
-research_task:
+fetch_insights:
   description: >
-    Find 3-5 interesting and recent facts about {topic} as of year 2025.
+    Search for 3-5 recent and surprising insights about {topic}, using only up-to-date sources (as of 2025).
   expected_output: >
-    A bullet list of 3-5 facts
+    A bullet list of key facts or discoveries in 2025 related to the topic.
 
-blog_task:
+summarize_insights:
   description: >
-    Write a 100-word blog post summary about {topic} using the facts from the research.
+    Write a short and engaging blog post summary (around 100 words) using the researched facts.
   expected_output: >
-    A blog post summary
+    A short blog post that summarizes the insights in an engaging way.
